--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ "/css/index.css" | relative_url }}">
+        <link rel="stylesheet" href="{{ "/assets/index.css" | relative_url }}">
         <link rel="stylesheet" href="{{ "/assets/styles/index.css" | relative_url }}">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
     </head>
