Small resets improvement

--- a/scss/configuration/colors.scss
+++ b/scss/configuration/colors.scss
@@ -1,3 +1,4 @@
+$color-link         : #2962ff !default;
 $color-text         : #222222 !default;
 $color-border       : #dfdfdf !default;
 $color-background   : #ffffff !default;
