--- a/scss/resets/global.scss
+++ b/scss/resets/global.scss
@@ -1,7 +1,3 @@
-@at-root {
-    @-ms-viewport { width: device-width; }
-}
-
 *, *:after, *:before {
     box-sizing: inherit;
 
@@ -21,23 +17,16 @@ body, html {
     min-width: 320px;
     height: 100%;
 
-    overflow-x: hidden;
-    overflow-y: scroll;
+    margin: 0;
+    padding: 0;
 
     font-family: $font-main;
     font-size: $font-size;
 
-    margin: 0;
-    padding: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     box-sizing: border-box;
-}
-
-input, button, textarea, a, a:active, a:focus, a:hover {
-    text-decoration: none;
-
-    outline: none;
-    cursor: pointer;
 }
 
 hr {
@@ -49,8 +38,15 @@ hr {
     background-color: $color-border;
 }
 
+input, button, textarea, a, a:active, a:focus, a:hover {
+    text-decoration: none;
+
+    outline: none;
+    cursor: pointer;
+}
+
 a {
-    color: #2962ff;
+    color: $color-link;
 
     -webkit-text-decoration-skip: objects;
 }
