--- a/scss/resets/highlight.scss
+++ b/scss/resets/highlight.scss
@@ -40,81 +40,40 @@
     .kc     { font-weight: bold; }
     .kd     { font-weight: bold; }
     .kp     { font-weight: bold; }
-      .kr {
-      font-weight: bold; }
-      .kt {
-      color: #458;
-      font-weight: bold; }
-      .m {
-      color: #099; }
-      .s {
-      color: #d14; }
-      .na {
-      color: #008080; }
-      .nb {
-      color: #0086B3; }
-      .nc {
-      color: #458;
-      font-weight: bold; }
-      .no {
-      color: #008080; }
-      .ni {
-      color: #800080; }
-      .ne {
-      color: #900;
-      font-weight: bold; }
-      .nf {
-      color: #900;
-      font-weight: bold; }
-      .nn {
-      color: #555; }
-      .nt {
-      color: #000080; }
-      .nv {
-      color: #008080; }
-      .ow {
-      font-weight: bold; }
-      .w {
-      color: #bbb; }
-      .mf {
-      color: #099; }
-      .mh {
-      color: #099; }
-      .mi {
-      color: #099; }
-    .mo {
-      color: #099; }
-      .sb {
-      color: #d14; }
-      .sc {
-      color: #d14; }
-      .sd {
-      color: #d14; }
-      .s2 {
-      color: #d14; }
-      .se {
-      color: #d14; }
-      .sh {
-      color: #d14; }
-    .si {
-      color: #d14; }
-    .sx {
-      color: #d14; }
-    .sr {
-      color: #009926; }
-    .s1 {
-      color: #d14; }
-    .ss {
-      color: #990073; }
-    .bp {
-      color: #999; }
-    .vc {
-      color: #008080; }
-    .vg {
-      color: #008080; }
-    .vi {
-      color: #008080; }
-    .il {
-      color: #099; }
-
+    .kr     { font-weight: bold; }
+    .kt     { color: #458;  font-weight: bold; }
+    .m      { color: #099; }
+    .s      { color: #d14; }
+    .na     { color: #008080; }
+    .nb     { color: #0086B3; }
+    .nc     { color: #458; font-weight: bold; }
+    .no     { color: #008080; }
+    .ni     { color: #800080; }
+    .ne     { color: #900; font-weight: bold; }
+    .nf     { color: #900; font-weight: bold; }
+    .nn     { color: #555; }
+    .nt     { color: #000080; }
+    .nv     { color: #008080; }
+    .ow     { font-weight: bold; }
+    .w      { color: #bbb; }
+    .mf     { color: #099; }
+    .mh     { color: #099; }
+    .mi     { color: #099; }
+    .mo     { color: #099; }
+    .sb     { color: #d14; }
+    .sc     { color: #d14; }
+    .sd     { color: #d14; }
+    .s2     { color: #d14; }
+    .se     { color: #d14; }
+    .sh     { color: #d14; }
+    .si     { color: #d14; }
+    .sx     { color: #d14; }
+    .sr     { color: #009926; }
+    .s1     { color: #d14; }
+    .ss     { color: #990073; }
+    .bp     { color: #999; }
+    .vc     { color: #008080; }
+    .vg     { color: #008080; }
+    .vi     { color: #008080; }
+    .il     { color: #099; }
 }
