--- a/scss/index.scss
+++ b/scss/index.scss
@@ -26,10 +26,12 @@
         "utils/is-unselectable",
         "utils/is-reversed";
 
-@import "resets/typography",
-        "resets/normalize",
+@import "resets/normalize",
         "resets/highlight",
         "resets/global";
+
+@import "content/typography",
+        "content/table";
 
 @import "components/forms/control",
         "components/forms/buttons",
@@ -38,7 +40,6 @@
         "components/box",
         "components/grid",
         "components/menu",
-        "components/table",
         "components/block",
         "components/alerts",
         "components/badges",
