--- a/scss/content/table.scss
+++ b/scss/content/table.scss
@@ -5,6 +5,7 @@
     margin: 1rem 0 2rem;
 
     border-collapse: collapse;
+    border-spacing: 0;
     border-width: 1px 0;
     border-style: solid;
     border-color: $color-border;
