--- a/scss/components/forms/buttons.scss
+++ b/scss/components/forms/buttons.scss
@@ -63,6 +63,16 @@
         width: 100%;
     }
 
+    &.is-disabled, &[disabled] {
+        opacity: .25;
+        cursor: not-allowed;
+
+        &:hover,
+        &:active {
+            transform: none;
+        }
+    }
+
     .icon {
         padding: 0 .25rem 0 0;
         margin: 0 .25rem 0 -.25rem;
