--- a/scss/index.scss
+++ b/scss/index.scss
@@ -31,7 +31,8 @@
         "resets/global";
 
 @import "content/typography",
-        "content/table";
+        "content/table",
+        "content/list";
 
 @import "layout/app",
         "layout/block",
