--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-    <div class="content typo">
-        <ul>
+    <div class="content">
+        <ul class="list is-inline">
             <li><a href="#">Github</a></li>
             <li><a href="#">Examples</a></li>
             <li><a href="#">Documentation</a></li>
