--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -9,7 +9,7 @@
     align-items: center;
     flex-direction: column;
 
-    padding: 0 1rem 2rem;
+    padding: 2rem 1rem;
     margin: 0;
 
     width: 100%;
