--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="content">
         <ul class="list is-inline">
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Examples</a></li>
-            <li><a href="#">Documentation</a></li>
+            <li><a href="https://github.com/Bartozzz/Wireframe">Github</a></li>
+            <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
+            <li><a href="{{ site.baseurl }}/examples/">Examples</a></li>
         </ul>
 
         <p>{{ site.description | escape }}</p>
