--- a/scss/content/list.scss
+++ b/scss/content/list.scss
@@ -16,8 +16,12 @@
         li {
             display: inline-flex;
 
-            margin: 0 .75rem 0 0;
+            margin: 0;
             padding: 0;
+
+            &.is-espaced {
+                margin: 0 .75rem 0 0;
+            }
 
             & > .button {
                 margin: 0;
