--- a/scss/components/forms/inputs.scss
+++ b/scss/components/forms/inputs.scss
@@ -1,34 +1,32 @@
 .input {
+    -webkit-appearance: none;
     display: flex-block;
 
     padding: 1.35rem .5rem .25rem .5rem;
+    margin: 0;
 
+    max-width: 100%;
     width: 100%;
 
     border-width: 1px;
     border-style: solid;
     border-radius: 3px;
     border-color: $color-border;
+    background-color: $color-background;
 
-    &.is-active ~ .label,
-    &.is-focus ~ .label,
-    &:focus ~ .label,
-    &:valid ~ .label {
-        top: 7px;
-        left: 10px;
-        font-size: .75rem;
-        color: $color-text;
-    }
+    box-shadow: none;
+    outline: none;
+    resize: none;
 }
 
 .label {
     position: absolute;
-    color:#999;
-    font-size:18px;
-    font-weight:normal;
-    position:absolute;
-    pointer-events:none;
-    left:5px;
-    top:10px;
-    transition:0.2s ease all;
+    top: 7px; left: 10px;
+
+    color: $color-text;
+    font-size: .75rem;
+    font-weight: normal;
+
+    pointer-events: none;
+    transition: all .2s ease;
 }
