Moved grid to layout

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -35,6 +35,7 @@
         "content/list";
 
 @import "layout/app",
+        "layout/grid",
         "layout/block",
         "layout/content",
         "layout/drawer",
@@ -45,7 +46,6 @@
         "components/forms/buttons",
         "components/forms/inputs",
         "components/box",
-        "components/grid",
         "components/menu",
         "components/alerts",
         "components/badges";
