--- a/docs/_includes/drawer.html
+++ b/docs/_includes/drawer.html
@@ -30,7 +30,7 @@
         {% endfor %}
     </ul>
 
-    <header class="drawer-footer">
+    <footer class="drawer-footer">
         Version: {{ site.release }}
-    </header>
+    </footer>
 </menu>
