Fix GitHub Pages paths

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,8 +2,8 @@
     <div class="content">
         <ul class="list is-inline">
             <li class="is-espaced"><a href="https://github.com/Bartozzz/Wireframe">Github</a></li>
-            <li class="is-espaced"><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
-            <li class="is-espaced"><a href="{{ site.baseurl }}/examples/">Examples</a></li>
+            <li class="is-espaced"><a href="{{ "/docs/" | relative_url }}">Documentation</a></li>
+            <li class="is-espaced"><a href="{{ "/examples/" | relative_url }}">Examples</a></li>
         </ul>
 
         <p>{{ site.description | escape }}</p>
