Update imports, pack imports together

--- a/scss/components/forms/buttons.scss
+++ b/scss/components/forms/buttons.scss
@@ -1,3 +1,5 @@
+@import "../../configuration/index";
+
 @mixin state-button($color) {
     background-color: darken($color, 15%);
     border-color: darken($color, 15%);
