--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="content">
-        <ul class="list is-inline">
-            <li class="is-espaced"><a href="https://github.com/Bartozzz/Wireframe">Github</a></li>
+        <ul class="list is-inline" role="menu">
+            <li class="is-espaced"><a href="https://github.com/Bartozzz/Wireframe" role="link">Github</a></li>
             <li class="is-espaced"><a href="{{ "/docs/" | relative_url }}">Documentation</a></li>
             <li class="is-espaced"><a href="{{ "/examples/" | relative_url }}">Examples</a></li>
         </ul>
