--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,7 +31,7 @@
         <main class="app-container">
             {% include header.html %}
 
-            <div class="app-scroll">
+            <div class="app-scroll" role="main">
                 {{ content }}
 
                 {% include footer.html %}
