:heavy_plus_sign: Handle drawer opening on mobiles

--- a/docs/_includes/drawer.html
+++ b/docs/_includes/drawer.html
@@ -1,4 +1,4 @@
-<menu class="drawer is-unselectable" role="navigation">
+<menu class="drawer is-unselectable" role="navigation" id="drawer">
     <header class="drawer-header">
         <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     </header>
