--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header is-unselectable">
     <div class="content align-between">
         <div class="header-menu">
-            <div class="drawer-toggle" aria-label="Drawer">
+            <div class="drawer-toggle" aria-label="Drawer" data-toggle="drawer">
                 <span></span>
                 <span></span>
                 <span></span>
