--- a/scss/configuration/mixins/typography.scss
+++ b/scss/configuration/mixins/typography.scss
@@ -26,7 +26,7 @@
     $line-height: max(ceil(strip-units($max)), 2);
 
     // Set the styles:
-    font-size: calc(1vw + 1vh + .5vmin) / $max;
+    font-size: $max;
     line-height: #{$line-height}rem;
 
     margin: #{2 + ($line-height%2)}rem 0 1rem 0;
